Fix: Drop Cap + alignment produces a gap between paragraphs

--- a/packages/block-library/src/paragraph/style.scss
+++ b/packages/block-library/src/paragraph/style.scss
@@ -31,7 +31,6 @@
 .has-drop-cap:not(:focus)::after {
 	content: "";
 	display: table;
-	clear: both;
 	padding-top: $block-padding;
 }
 
